--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,6 @@ services:
     build: .
     volumes:
       - /home/thecrown/certs/haoyuanlord.com/privkey.pem:/app/cert/website.key
-      - /home/thecrown/certs/haoyuanlord.com/cert.pem:/app/cert/website.crt
+      - /home/thecrown/certs/haoyuanlord.com/fullchain.pem:/app/cert/website.crt
     ports:
       - "4443:443"
